--- a/pulltorefresh-and-loadmore/res/layout/load_more_footer.xml
+++ b/pulltorefresh-and-loadmore/res/layout/load_more_footer.xml
@@ -15,20 +15,20 @@
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
  * limitations under the License.
- */
+ */
 -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/load_more_footer"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:background="@color/black" >
+    android:background="@color/jeddahFoodBackGround" >
 
     <View
         android:id="@+id/top_line"
         android:layout_width="fill_parent"
         android:layout_height="0.5dp"
         android:layout_alignParentTop="true"
-        android:background="@color/dark_slate_gray"
+        android:background="@color/jeddahFoodBackGround"
         android:visibility="visible" />
 
     <!--
@@ -41,7 +41,7 @@
         android:padding="3dp"
         android:text="@string/load_more_post"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textColor="@color/dark_slate_gray" />
+        android:textColor="@color/jeddahFoodBackGround" />
     -->
 
     <ProgressBar
